SLURMS/LOGS/DenseNet169/ISIC2016+ISIC2017+ISIC2018+ISIC2019+MEDNODE+KaggleMB_1_DenseNet169_150h_150w_325816_4294967294.err
2024-02-29 20:18:16.105865: I tensorflow/stream_executor/platform/default/dso_loader.cc:53] Successfully opened dynamic library libcudart.so.11.0
Traceback (most recent call last):
  File "/home/sanghyuk.kim001/MELANOMA/melanoma-detection-CNN/train.py", line 2, in <module>
    import melanoma as mel
  File "/home/sanghyuk.kim001/MELANOMA/melanoma-detection-CNN/melanoma/__init__.py", line 5, in <module>
    from .cnn import CNN
  File "/home/sanghyuk.kim001/MELANOMA/melanoma-detection-CNN/melanoma/cnn.py", line 414
    model = Sequential()
    ^
IndentationError: expected an indented block
